--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         />
         <title>축제가자</title>
     </head>
-    <body>
+    <body class="dark:bg-custom-darkmode">
         <div id="root"></div>
         <script
             type="text/javascript"
